Fix up columnns so it doesn't overlap when screen shrinks

--- a/styles/blocks/columns.css
+++ b/styles/blocks/columns.css
@@ -2,11 +2,11 @@ main div.columns {
     display: flex;
     flex-direction: column;
     width: 100%;
-    max-width: 1280px;
 } 
 
 main div.columns > div{
     display: flex;
+    flex-direction: row;
 } 
 
 main div.columns > div p {
@@ -16,14 +16,18 @@ main div.columns > div p {
     line-height: 24px;
 } 
 
-main div.columns > div:nth-child(even){
-    flex-direction: row-reverse;
-} 
-
 main div.columns > div:nth-child(odd) > div {
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+main div.columns > div h3 {
+    font-size: 22px;
+    color: rgb(44, 44, 44);
+    font-weight: 700;
+    line-height: 28.6px;
+
 }
 
 main div.columns > div:nth-child(odd) > div:first-child p {
@@ -54,16 +58,20 @@ main div.columns > div{
     flex-direction: column;
 } 
 
-
-@media (min-width:600px) {
+@media (min-width:1000px) {
     main div.columns > div{
         flex-direction: row;
     } 
-    
+
     main div.columns > div > div {
         width: 50%;
         padding: 16px;
-    }     
+    }
+
+    main div.columns > div:nth-child(even){
+        flex-direction: row-reverse;
+    } 
+
 }
 
 main .columns-container {
